--- a/gb/25/12/2/n14647278.md
+++ b/gb/25/12/2/n14647278.md
@@ -2,47 +2,48 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2027年全面禁厨余养猪 团膳业者忧成本增加</h2>
-<h6></h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/10/id14622102-803878-600x400.jpg" />
+<h6>台中市10月爆发非洲猪瘟，引发厨余养猪防疫疑虑。（台中市政府提供）</h6>
 <hr>
-<p>【大纪元2025年12月02日讯】（大纪元记者赖玟茹台湾台北报导）非洲猪瘟中央灾害应变中心近日开会，拟调整厨余养猪政策，规划2026年起为转型期，2027年起全面禁止。猪农对此质疑，1年转型时间拖太久。对此，团膳业者坦言，厨余去化的核心问题是能否找到接手管道，届时若须由业者处理，成本势必会增加，经估算，餐费每人将增加新台币三元。</p>
-<p>台中市梧栖区1间养猪场出现非洲猪瘟疫情，应变中心11月3日公布疫情调查报告，推论病毒可能来自未落实蒸煮的厨余，因此，目前仍禁厨余养猪。目前为考量防疫，兼顾厨余去化与养猪户转型实务，拟全禁厨余养猪，但设转型期。</p>
-<p>非洲猪瘟中央灾害应变中心近日与地方政府开会，讨论厨余养猪政策调整，拟2026年起1年为转型期，符合4条件可厨余养猪，但不开放家用厨余，只可使用事业厨余、动物性废渣及畜禽屠宰下脚料，暂订转型最后期限为2026年12月31日，2027年起全面禁止。</p>
-<p>据统计，目前全台有五千四百多家养猪场，厨余养猪约四百多家。为鼓励厨余养猪户加速转型，农业部规划立即要转型的猪农，今年底前提出申请，提供饲料补助每头3600元，2026年申请每头补助减半为1800元。</p>
-<p>应变中心2日再与猪农开会，针对应变中心拟调整厨余养猪的政策方向进行沟通。中华民国养猪协会理事长潘连周受访时说，目前多数县市都支持全面禁用厨余，现在要非常谨慎，“台湾再一次发生非洲猪瘟，大家可能就得改吃进口猪肉”。</p>
-<p>潘连周也说，防疫视同作战，还要等1年时间，真的拖太久，非洲猪瘟不会等政府一切都准备好再来，不合逻辑，如果真的要1年的落日条款，干脆让猪农离牧算了。</p>
-<p>另在校园团膳业者看来，厨余去化将会是亟待解决的关键问题。中华民国餐盒公会全国联合会秘书长阮专铭向《大纪元时报》表示，目前厨余处理，主要依赖猪农协助清运，厨余去化的核心问题是能否找到接手管道。</p>
-<p>阮专铭谈及，目前厨余去化政策，虽订有落日条款，但仍端看猪农是否愿意配合提升监控标准、申请，若猪农不愿配合，落日期间势必会提早，然而厨余仍会每天持续产生。</p>
-<p>未来若全面禁止使用厨余养猪，恐增团膳业者的厨余处理成本，阮专铭表示，这是必然会发生的，过往厨余是有价的，养猪户愿意协助清运，一旦厨余变成烫手山芋，团膳业者就必须依靠地方清洁队或专业清运业者，这必然会增加清运成本。</p>
-<p>至于全面禁止厨余养猪后增加的清运成本，阮专铭表示，经公会估算，届时餐费每人将增加新台币三元，但仍视各县市情况有所不同，若有县市清洁队愿意协助去化，就不会增加成本，若团膳业者须自行处理，成本势必就会增加。</p>
+<p>【大纪元2025年12月02日讯】（大纪元记者赖玟茹台湾台北报导）非洲猪瘟中央灾害应变中心近日开会，拟调整厨余养猪政策，规划2026年起为转型期，2027年起全面禁止。但猪农质疑，一年转型时间拖太久。对此，团膳业者坦言，厨余去化的核心问题是能否找到接手管道，届时若须由业者处理，成本势必会增加，经估算，餐费每人将增加新台币3元。</p>
+<p>台中市梧栖区一间养猪场出现非洲猪瘟疫情，应变中心11月3日公布疫情调查报告，推论病毒可能来自未落实蒸煮的厨余，因此禁止厨余养猪。目前为考量防疫，兼顾厨余去化与养猪户转型实务，拟全禁厨余养猪，但设一年转型期。</p>
+<p>非洲猪瘟中央灾害应变中心近日与地方政府开会，讨论厨余养猪政策调整，拟2026年起一年为转型期，符合4条件可厨余养猪，但不开放家用厨余，只可使用事业厨余、动物性废渣及畜禽屠宰下脚料，暂订转型最后期限为2026年底，2027年起全面禁止。</p>
+<p>据统计，目前全台有5,400多家养猪场，厨余养猪约400多家。为鼓励厨余养猪户加速转型，农业部规划立即要转型的猪农，今年底前提出申请，提供饲料补助每头3,600元，2026年申请每头补助减半为1,800元。</p>
+<p>中华民国养猪协会理事长潘连周受访表示，目前多数县市都支持全面禁用厨余，“台湾再一次发生非洲猪瘟，大家可能就得改吃进口猪肉”，防疫视同作战，还要等一年，真的拖太久，如果真的要一年的落日条款，干脆让猪农离牧算了。</p>
+<p>另在校园团膳业者看来，厨余去化将会是亟待解决的关键问题。中华民国餐盒公会全国联合会秘书长阮专铭向《大纪元时报》表示，目前厨余处理，主要依赖猪农协助清运，厨余去化的核心问题是否能找到接手管道？目前虽订有落日条款，但仍需看猪农是否愿意配合提升监控标准、申请，不然落日期间势必会提早。</p>
+<p>未来若全面禁止使用厨余养猪，恐增团膳业者的厨余处理成本，阮专铭说，一旦厨余变成烫手山芋，团膳业者就必须依靠地方清洁队或专业清运业者，这必然会增加清运成本，经公会估算，届时餐费每人将增加新台币3元，但仍视各县市情况有所不同，若县市清洁队愿意协助去化，就不会增加成本，若团膳业者须自行处理，成本势必就会增加。</p>
+<h2><strong>中央宣布缓冲期?</strong><strong>中市原订提早实施</strong></h2>
+<p>台中市厨余转型将资源化与能源化，力拼明年提早让厨余不进焚化炉去化。市长卢秀燕强调，台中市内部评估原订明年10月起全面禁用厨余养猪，因中央宣布落日期程，与台中仅差距2个月，将再开会研议是否与中央同步，让猪农及厨余处理业者有所遵循。</p>
+<p>台中市养猪协会表示，各地养猪协会11月2日北上听政策说明和沟通，政策决定1年缓冲期，也有可能先禁用家户厨余，事业厨余是否可继续使用，可能还有调整空间。◇</p>
 <p>责任编辑：陈玟绮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11010938.md#1" target="_blank">古罗马迫害基督徒与中共迫害法轮功对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/2/n11229916.md#1" target="_blank">制止强摘人体器官 全球立法行动知多少</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/7/n9814027.md#1" target="_blank">十月革命百年 美重磅评论剖析共产主义罪恶</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/5/n11367520.md#1" target="_blank">响彻在世界政坛的正义之声（中）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/1/n14472598.md#1">【品读唐诗】登高秋望 吟成古今第一七言律</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644037.md#1">难以归位的怅然若失——解读苏轼《后赤壁赋》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642446.md#1">【未解之谜】中共官员死而复活 带回冥界惊人信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642937.md#1">祖辈积德福荫子孙 一个善有善报的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646908.md#1">【直播】民主党参议员凯利就川普政府举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646871.md#1">【直播】莱维特主持白宫简报会（12/1）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647168.md#1">【时事金扫描】马杜罗逃了？被四大后援国抛弃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645992.md#1">年仅15岁 比利时天才获量子物理学博士学位</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645228.md#1">“猛禽”依然翱翔 美空军为何需要F-22战机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645757.md#1">美国人黑五购物金额创纪录 哪些产品最畅销</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645294.md#1">首导影片未邀冯德伦出演 舒淇笑称他缺一条件</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645754.md#1">香港大火夺逾百命 甄妮黄秋生等艺人呛官方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645801.md#1">滨崎步上海演唱会被取消 独自登台完成演出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645821.md#1">周润发满头白发登MAMA 率全场哀悼火灾罹难者</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645828.md#1">坤达涉闪兵 《玩很大》最后录影曝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645400.md#1">玻璃罐打不开？ 英国教授教你用这招迅速搞定</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645735.md#1">为何很多人要改用“傻瓜手机”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645970.md#1">鱼刺卡喉咙的风险比你想像的高 如何处理？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646574.md#1">为何无条件的感恩会让你幸福？如何培养？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14636939.md#1">【梁厨美食】牛筋丸粉丝椰菜汤锅～热腾腾好暖胃！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/2/n14647278.htm">2027年全面禁厨余养猪 团膳业者忧成本增加</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647278.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
